--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
 sklearn
-scikit-learn
+scikit-learn==0.24.2
+matplotlib==3.1.0
 shap
-catboost
-lightgbm
-xgboost
+catboost==1.0.4
+lightgbm==3.3.2
+xgboost==1.5.2
 category-encoders
 optuna
 pickle
