--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-pip==22.3.1
-streamlit==1.15.2
-sklearn
-scikit-learn==0.24.2
-matplotlib==3.1.0
+scikit-learn
 shap
-catboost==1.0.4
-lightgbm==3.3.2
-xgboost==1.5.2
-category-encoders
-optuna
+catboost
+lightgbm
+xgboost
