--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-pip --upgrade
-wheel --upgrade
-setuptools --upgrade
 scikit-learn
 shap
 catboost
 lightgbm
 xgboost
-matplotlib==3.1.1
-pdpbox==0.20.0
+matplotlib
