--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,7 @@
-scikit-learn
-patsy
-statsmodels
-sklearn
-ipywidgets
-pandasql
-IPython
-eli5
-seaborn
-shap
-PyQt5
-catboost
-lightgbm
-xgboost
-optuna
-PDPbox-0.2.0.tar.gz
+pandas>=1.3.1
+numpy>=1.21.5
+catboost>=0.25.1
+matplotlib>=3.1.0
+sklearn==0.24.2
+pdpbox==0.2.0
+autobinary-1.0.10.tar.gz
