--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.15.1
 ipywidgets
 IPython
-jinja2==3.0.0
 autobinary-1.0.5.tar.gz
 optuna
 numpy==1.23.3
+pandas==1.3.1
+jinja2==3.0.0
+streamlit==1.15.1
